--- a/css/style.css
+++ b/css/style.css
@@ -10,36 +10,74 @@
 .list-group {
     color: white;
     text-align: center;
-
 } 
-#login-form {
+.login-out {
+    font-size: 20px;
+    color: rgb(113, 27, 233);
+    background-color:bisque;
+    padding: 15px; 
+    border-style:groove; 
+    border-radius:8px;
+}
+.login-input{
+    font-size: 20px;
+    background-color:bisque;
+    padding: 15px; 
+    border-style:groove; 
+    border-radius:8px;
+}
+#weather {
     font-size: 30px;
     position: absolute;
+    top: 10%;
+    left: 10%;
+    transform: translate( -50%, -50% );
+}
+#date {
+    font-size: 40px;
+    /* text-align: left; */
+    position: absolute;
     top: 20%;
-	left: 50%;
+    left: 10%;
     transform: translate( -50%, -50% );
 }
 #clock {
-    font-size: 100px;
-    text-align: center;
+    font-size: 70px;
+    /* text-align: center; */
     position: absolute;
     top: 30%;
-	left: 50%;
+	left: 10%;
+    transform: translate( -50%, -50% );
+}
+#login-form {
+    font-size: 60px;
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate( -50%, -50% );
+    text-align: center;
+}
+#logout-form {
+    font-size: 100px;
+    position: absolute;
+    top: 20%;
+    left: 70%;
     transform: translate( -50%, -50% );
 }
 #greeting {
     font-size: 45px;
 	position: absolute;
-    top: 40%;
+    top: 20%;
 	left: 50%;
     transform: translate( -50%, -50% );
 }
 #todo-form {
-    font-size: 25px;
+    font-size: 40px;
 	position: absolute;
-    top: 50%;
+    top: 35%;
 	left: 50%;
     transform: translate( -50%, -50% );
+    text-align: center;
 }
 #todo-list {
     font-size: 25px;
@@ -53,13 +91,6 @@
     position: absolute;
     top: 90%;
 	left: 50%;
-    transform: translate( -50%, -50% );
-}
-#weather {
-    font-size: 20px;
-    position: absolute;
-    top: 5%;
-	left: 93%;
     transform: translate( -50%, -50% );
 }
 * {
