--- a/css/style.css
+++ b/css/style.css
@@ -7,96 +7,131 @@
     width: 100%;
     height: 100vh;
 }
+.input-todo{
+    font-size: 20px; 
+    padding: 15px; 
+    border-style:groove; 
+    border-radius:8px;
+    background-color:rgb(219, 240, 128); 
+    width:400px;
+    text-align:center;
+}
+.nomad,.googlesearch, .slack, .mdn, .gcalendar, .gmail {
+    font-size: 20px;
+    position: absolute;
+    left: 90%;
+    transform: translate( -50%, -50% );
+    text-align: center;
+    text-decoration: none;
+}
+.nomad {
+    top: 10%;
+}
+.googlesearch {
+    top: 25%;
+}
+.slack {
+    top: 40%;
+}
+.mdn{
+    top: 55%;
+}
+.gcalendar{
+    top: 70%;
+}
+.gmail{
+    top: 85%;
+}
+.music {
+    font-size: 20px;
+    position: absolute;
+    top: 60%;
+    left: 10%;
+    transform: translate( -50%, -50% );
+    text-align: center;
+    text-decoration: none;
+}
 .list-group {
     color: white;
     text-align: center;
 } 
-.login-out {
+.login-out, .login-input {
     font-size: 20px;
-    color: rgb(113, 27, 233);
     background-color:bisque;
     padding: 15px; 
     border-style:groove; 
     border-radius:8px;
 }
-.login-input{
-    font-size: 20px;
-    background-color:bisque;
-    padding: 15px; 
-    border-style:groove; 
-    border-radius:8px;
+.login-out {
+    color: rgb(113, 27, 233);
+}
+#weather, #date, #clock, #login-form, #logout-form, #greeting, #todo-form, #todo-list, #quote {
+    position: absolute;
+    transform: translate( -50%, -50% );
 }
 #weather {
     font-size: 30px;
-    position: absolute;
     top: 10%;
     left: 10%;
-    transform: translate( -50%, -50% );
 }
 #date {
     font-size: 40px;
-    /* text-align: left; */
-    position: absolute;
-    top: 20%;
+    top: 25%;
     left: 10%;
-    transform: translate( -50%, -50% );
 }
 #clock {
     font-size: 70px;
-    /* text-align: center; */
-    position: absolute;
-    top: 30%;
+    top: 40%;
 	left: 10%;
-    transform: translate( -50%, -50% );
 }
 #login-form {
     font-size: 60px;
-    position: absolute;
     top: 20%;
     left: 50%;
-    transform: translate( -50%, -50% );
     text-align: center;
 }
 #logout-form {
     font-size: 100px;
-    position: absolute;
     top: 20%;
     left: 70%;
-    transform: translate( -50%, -50% );
 }
 #greeting {
     font-size: 45px;
-	position: absolute;
     top: 20%;
 	left: 50%;
-    transform: translate( -50%, -50% );
 }
 #todo-form {
     font-size: 40px;
-	position: absolute;
     top: 35%;
 	left: 50%;
-    transform: translate( -50%, -50% );
     text-align: center;
 }
 #todo-list {
     font-size: 25px;
-	position: absolute;
     top: 60%;
-	left: 50%;
-    transform: translate( -50%, -50% );
+	left: 45%;
 }
 #quote {
     font-size: 20px;
-    position: absolute;
     top: 90%;
 	left: 50%;
-    transform: translate( -50%, -50% );
 }
 * {
     margin: 0;
     overflow-wrap: break-word;
 }
+.todo-box {
+    background-color: black;
+    width: 550px;
+    padding: 150px;
+    margin: 0px;
+    opacity: 0.3;
+    position: absolute;
+    top: 60%;
+	left: 50%;
+    transform: translate( -50%, -50% );
+    border-radius:8px;
+  }
 @media screen and (min-width: 480px)  {
 
 
